Tue Sep  7 14:23:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Message_Queue_T.cpp:
        * examples/APG/ThreadPools/LF_ThreadPool.cpp:
        * examples/APG/ThreadPools/ThreadPool.cpp:
        * examples/APG/ThreadSafety/Mutex.cpp:
        * examples/APG/Threads/Condition_Variables.cpp:
        * protocols/ace/HTBP/HTBP_ID_Requestor.h:
        * protocols/ace/TMCast/Group.cpp:
        * protocols/ace/TMCast/MTQueue.hpp:
        * tests/Bug_3878_Regression_Test.cpp:
        * tests/Upgradable_RW_Test.cpp:
          Fixed compile problems

Tue Sep  7 11:35:04 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * bin/fuzz.pl:
          Fix fuzz problem

Tue Sep  7 10:52:59 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Kokyu/DSRT_Direct_Dispatcher_Impl_T.cpp:
          Use ACE_GUARD

        * Kokyu/Dispatcher_Task.cpp:
          Initialise pointer with 0

        * PROBLEM-REPORT-FORM:
        * VERSION:
          Updated support email addresses

        * ace/ACE.inl:
          Layout changes

        * ace/ACE.cpp:
          Layout changes, simplified some ifdef checks

        * ace/Auto_IncDec_T.h:
        * ace/Env_Value_T.h:
          Use ACE_Copy_Disabled

        * ace/Bound_Ptr.inl:
          Documentation updates

        * ace/CORBA_macros.h:
          Removed all deprecated macros

        * ace/Dynamic_Service_Base.cpp:
          Use ACE_GUARD_RETURN

        * ace/Event_Handler_T.h:
        * ace/Event_Handler_T.inl:
        * ace/Event_Handler_T.cpp:
          Removed checks for ACE_HAS_TEMPLATE_TYPEDEFS, I think all compilers
          have this now, let us see if nothing breaks

        * ace/FILE.h:
          Doxygen updates

        * ace/Future.h:
        * ace/Future.cpp:
          Use mutex defines

        * ace/Future_Set.h:
          Use ACE_Copy_Disabled

        * ace/Future_Set.cpp:
          Initialise pointer with 0

        * ace/Global_Macros.h: