@@ -1,3 +1,7 @@
+Tue Sep  7 17:07:58 UTC 2010  Steve Huston  <shuston@riverace.com>
+
+        * ace/Process.h: Noted the affects of handle_inheritance() on Windows.
+
 Tue Sep  7 14:23:13 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * ace/Message_Queue_T.cpp:
